新组件旧方法调整 @1.8.1

--- a/angular/yz/component/better-table/better-table.component.html
+++ b/angular/yz/component/better-table/better-table.component.html
@@ -6,7 +6,7 @@
     </tr>
   </table>
 
-  <div class="body">
+  <div id="betterTableBody" class="body">
 
     <table>
       <tr *ngFor='let p of pbody' [class.tr]='click' [class.select]='click && p.id == id' (click)='onclick(p)'>
