--- a/angular/yz/component/tags-choose/tags-choose.component.html
+++ b/angular/yz/component/tags-choose/tags-choose.component.html
@@ -1,10 +1,10 @@
-<div class="tagsbox" (click)="show()">
+<div class="tagsbox" (click)="show()" (click)="$event.cancelBubble = true">
 
   <span *ngFor="let t of tagsChoose" class="tags">{{t}}</span>
 
 </div>
 
-<div class="listbox downdisplay" *ngIf="listShow">
+<div class="listbox" [class.heightmore]='listShow' [class.heightless]='!listShow' (click)="$event.cancelBubble = true">
 
   <div *ngFor='let t of tags'>
 
