--- a/angular/yz/component/tags-choose/tags-choose.component.css
+++ b/angular/yz/component/tags-choose/tags-choose.component.css
@@ -1,12 +1,13 @@
 :host {
-  width: 150px;
+  min-width: 150px;
   height: 30px;
-  display: block;
+  display: flex;
+  flex-flow: column;
   position: relative;
 }
 
 .tagsbox {
-  width: 100%;
+  flex: auto;
   height: 100%;
   padding: 0 5px;
   border: 1px solid var(--gray-middle);
@@ -18,7 +19,9 @@
   gap: 5px;
 }
 
-.tagsbox:hover { border-color: var(--theme-dark); }
+.tagsbox:hover {
+  border-color: var(--theme-dark);
+}
 
 .tags {
   padding: 2px 4px;
@@ -29,7 +32,7 @@
 
 .listbox {
   width: 100%;
-  margin-top: 5px;
+  margin-top: 30px;
   background: #fff;
   border: 1px solid var(--gray-middle);
   border-radius: 5px;
@@ -71,8 +74,8 @@
   color: var(--theme-dark)
 }
 
-.listtwobox { 
-  width: 100%; 
+.listtwobox {
+  width: 100%;
   display: flex;
   flex-flow: column;
 }
@@ -89,5 +92,5 @@
 
 .listone:hover,
 .listtwo:hover {
-  background: var(--theme-light); 
+  background: var(--theme-light);
 }
