--- a/angular/demo/app/app.component.css
+++ b/angular/demo/app/app.component.css
@@ -1,7 +1,7 @@
 :host {
   width: 100%;
   height: 100%;
-  background: #fff;
+  background: var(--gray-light);
   overflow: auto;
   display: block;
 }
@@ -15,7 +15,6 @@
 s-menu {
   width: 350px;
   height: 100%;
-  background: var(--gray-light);
   overflow: auto;
 }
 
@@ -23,4 +22,14 @@ s-menu {
   width: calc(100% - 350px);
   height: 100%;
   padding: 20px;
+}
+
+.others {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  overflow: auto;
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
 }
