--- a/angular/yz/component/better-table/sort/sort.component.html
+++ b/angular/yz/component/better-table/sort/sort.component.html
@@ -1,13 +1,9 @@
-<div class="iconbox" (click)='show()'>
+<svg viewBox="0 0 1024 1024" class="ordersvg" (click)='show()'>
+  <path d="M839.6 433.8L749 150.5a9.24 9.24 0 00-8.9-6.5h-77.4c-4.1 0-7.6 2.6-8.9 6.5l-91.3 283.3c-.3.9-.5 1.9-.5 2.9 0 5.1 4.2 9.3 9.3 9.3h56.4c4.2 0 7.8-2.8 9-6.8l17.5-61.6h89l17.3 61.5c1.1 4 4.8 6.8 9 6.8h61.2c1 0 1.9-.1 2.8-.4 2.4-.8 4.3-2.4 5.5-4.6 1.1-2.2 1.3-4.7.6-7.1zM663.3 325.5l32.8-116.9h6.3l32.1 116.9h-71.2zm143.5 492.9H677.2v-.4l132.6-188.9c1.1-1.6 1.7-3.4 1.7-5.4v-36.4c0-5.1-4.2-9.3-9.3-9.3h-204c-5.1 0-9.3 4.2-9.3 9.3v43c0 5.1 4.2 9.3 9.3 9.3h122.6v.4L587.7 828.9a9.35 9.35 0 00-1.7 5.4v36.4c0 5.1 4.2 9.3 9.3 9.3h211.4c5.1 0 9.3-4.2 9.3-9.3v-43a9.2 9.2 0 00-9.2-9.3zM416 702h-76V172c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v530h-76c-6.7 0-10.5 7.8-6.3 13l112 141.9a8 8 0 0012.6 0l112-141.9c4.1-5.2.4-13-6.3-13z"></path>
+</svg>
 
-  <svg class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
-    <path d="M679.139556 910.222222a113.948444 113.948444 0 0 1-113.777778 113.777778h-102.4a117.475556 117.475556 0 0 1-79.644445-33.336889 108.885333 108.885333 0 0 1-34.133333-80.440889V502.727111l-312.888889-307.882667a113.493333 113.493333 0 0 1-28.444444-124.188444A124.359111 124.359111 0 0 1 115.939556 0h796.444444a124.359111 124.359111 0 0 1 108.088889 70.656 113.493333 113.493333 0 0 1-28.444445 124.188444l-312.888888 307.882667z m-221.866667-460.174222c0 8.647111 5.688889 18.602667 5.688889 28.899556V910.222222h102.4V478.947556c0-10.296889 5.688889-20.252444 5.688889-28.899556 5.688889-4.209778 5.688889-8.135111 11.377777-11.662222L912.384 113.777778h-796.444444l329.955555 324.608c5.688889 3.527111 5.688889 7.452444 11.377778 11.662222z"></path>
-  </svg>
+<div class="orderbox updisplay" id='betterTableSort' *ngIf='showorder'>
 
-</div>
-
-<div class="sortbox updisplay" id='sortbox1' *ngIf='shows'>
-
-  <div class="sort" [class.shengxu]='type=="shengxu" && index==clickIndex' [class.jiangxu]='type=="jiangxu" && index==clickIndex' *ngFor='let h of head;let index=index' (click)='sort(h.field, index)'>{{h.name}}</div>
+  <div *ngFor='let h of head' class="order" [class.up]='order=="up" && h.id==sid' [class.down]='order=="down" && h.id==sid' (click)='sort(h)'>{{h.name}}</div>
 
 </div>
