--- a/angular/yz/component/better-table/better-table.component.html
+++ b/angular/yz/component/better-table/better-table.component.html
@@ -6,7 +6,7 @@
     </tr>
   </table>
 
-  <div id="betterTableBody" class="body">
+  <div #betterTableBody class="body">
 
     <table>
       <tr *ngFor='let p of pbody' [class.tr]='click' [class.select]='click && p.id == id' (click)='trClick(p)'>
