--- a/angular/yz/component/drop-down/drop-down.component.css
+++ b/angular/yz/component/drop-down/drop-down.component.css
@@ -1,7 +1,6 @@
 :host {
   width: 180px;
   height: 30px;
-  background: #fff;
   cursor: pointer;
   display: block;
   position: relative;
@@ -30,17 +29,21 @@
 }
 
 .showicon {
-  width: 20px;
+  width: .8em;
   height: 100%;
+  fill: var(--gray-dark);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.showbox:hover .showicon { fill: var(--theme-dark); }
+
 .lsitsbox {
   width: 100%;
+  font-size: .9em;
   margin-top: 5px;
-  background: #fff;
+  background: inherit;
   border: 1px solid var(--gray-middle);
   border-radius: 5px;
   display: flex;
