--- a/angular/yz/component/legend/legend.component.css
+++ b/angular/yz/component/legend/legend.component.css
@@ -1,4 +1,5 @@
 :host {
+  width: 100%;
   display: flex;
   gap: 10px;
   flex-flow: column;
@@ -6,21 +7,18 @@
 }
 
 .title {
-  font-size: 1.1em;
-  line-height: 20px;
   font-weight: 800;
-  display: flex;
 }
 
 .main {
-  max-height: var(--height);
+  width: 100%;
   display: flex;
   gap: 5px 10px;
   flex-flow: column wrap;
   align-content: flex-start;
 }
 
-.legend {
+.llegend {
   height: 20px;
   display: flex;
   gap: 5px;
