--- a/angular/yz/component/legend/legend.component.html
+++ b/angular/yz/component/legend/legend.component.html
@@ -6,7 +6,7 @@
 
     <div class="img">
 
-      <img [src]="l.url" [ngStyle]="{filter: l.color}" [style.background]="l.url || l.color">
+      <img [src]="l.url" [ngStyle]="{filter: 'drop-shadow(30px 0 '+l.color+')'}" [style.background]="l.url || l.color">
 
     </div>
 
