--- a/angular/yz/common/style/style.css
+++ b/angular/yz/common/style/style.css
@@ -16,7 +16,6 @@
 html {
   width: 100%;
   height: 100%;
-  font: .8rem;
 }
 
 body {
@@ -118,7 +117,7 @@ label { cursor: pointer; }
 
 @keyframes heightless {
   from { max-height: var(--maxheight); opacity: 1; }
-  to { max-height: 1px; opacity: 0; }
+  to { max-height: 0; opacity: 0; }
 }
 
 /* 最大高度增大 */
@@ -130,7 +129,7 @@ label { cursor: pointer; }
 }
 
 @keyframes heightmore {
-  from { max-height: 1px; opacity: 0; }
+  from { max-height: 0; opacity: 0; }
   to { max-height: var(--maxheight);  opacity: 1; }
 }
 
