--- a/angular/yz/component/better-table/sort/sort.component.css
+++ b/angular/yz/component/better-table/sort/sort.component.css
@@ -26,6 +26,7 @@
 .order {
   height: 100%;
   padding: 0 5px;
+  white-space: nowrap;
   border: 1px solid var(--gray-middle);
   border-radius: 5px;
   transition: all .3s;
