--- a/angular/yz/common/style/style.css
+++ b/angular/yz/common/style/style.css
@@ -42,7 +42,8 @@ input[type='button'] {
   cursor: pointer;
 }
 
-input[type='text'] {
+input[type='text'],
+input[type='password'] {
   color: inherit;
   background: inherit;
   border: 1px solid var(--gray-middle);
