super-menu 组件3次以上递归无法成功触发点击传值bug解决 @2.2.1

--- a/angular/demo/app/app.component.html
+++ b/angular/demo/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main">
 
-  <super-menu [origin]="smenu" [smenu]='smenu' (selectmenu)="selectmenu($event)" (selectMenu)="selectmenu($event)"></super-menu>
+  <super-menu [origin]="smenu" [smenu]='smenu' (selectmenu)="selectmenu($event)"></super-menu>
 
   <div class="router">
 
