better-table 组件表格添加滚动条 @2.2.3

--- a/angular/yz/component/better-table/better-table.component.css
+++ b/angular/yz/component/better-table/better-table.component.css
@@ -41,12 +41,12 @@ td {
 
 .body {
   flex: 1 1 auto;
-  overflow: auto;
+  overflow: overlay;
 }
 
-.body::-webkit-scrollbar {
+/* .body::-webkit-scrollbar {
   width: 0;
-}
+} */
 
 .tools {
   width: 100%;
