--- a/angular/yz/component/wtmd-time/wtmd-time.component.css
+++ b/angular/yz/component/wtmd-time/wtmd-time.component.css
@@ -13,13 +13,14 @@
   width: 100%;
   height: 40px;
   display: flex;
-  gap: 40px;
+  gap: 20px;
   align-items: center;
 }
 
 .children {
   flex: 1;
   display: flex;
+  gap: 10px;
   justify-content: space-between;
 }
 
@@ -32,7 +33,15 @@ label {
 label:hover,
 .on { color: var(--theme-dark); }
 
-nz-date-picker { width: 150px; }
+nz-date-picker { 
+  width: calc(100% - 4em);
+  transition: all .3s;
+}
+
+.scopDatePicker,
+.scopDatePicker ::ng-deep .ant-calendar-picker {
+  width: 100%;
+}
 
 input[type='button'] {
   background: #fff;
